<resources>
    <string name="app_name">相伴教育</string>

    <string name="title_activity_register">注册</string>
    <string name="title_activity_related_info">关联信息</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_school_dynamic">校园动态</string>
    <string name="title_activity_kid_school">育儿学堂</string>
    <string name="title_activity_auditing">AuditingActivity</string>
    <string name="title_activity_wait_audit">用户审核</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_message_notice_setting">新消息通知设置</string>
    <string name="title_activity_about">关于我们</string>
    <string name="title_activity_teacher_info">教师信息</string>
    <string name="title_activity_forget_password">忘记密码</string>
    <string name="title_activity_modify_password">修改密码</string>
    <string name="title_activity_class_dynamic">班级动态</string>
    <string name="title_activity_publish_dynamic">发布动态</string>
    <string name="title_activity_dynamic_detail">校园活动</string>
    <string name="title_activity_multi_picture">MultiPictureActivity</string>
    <string name="title_activity_parenting_edu">亲子教育</string>
    <string name="title_activity_task_detail">任务详情</string>
    <string name="title_activity_add_task">添加新任务</string>
    <string name="title_activity_intelligent_location">智能定位</string>
    <string name="title_activity_bracelet_introduce">手环介绍</string>
    <string name="title_activity_syllabus">课程表</string>
    <string name="title_activity_campus">校园吧</string>
    <string name="title_activity_campus_detail">校园吧详情</string>
    <string name="title_activity_add_relation_info">增加关联学生</string>
    <string name="title_activity_service_statement">服务协议</string>

    <string name="btn_submit_audit">提交审核</string>
    <string name="btn_login">登录</string>
    <string name="edit_input_password">请输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="get_auth_code">获取验证码</string>

    <string name="hint_input_cellphone">请输入手机号</string>
    <string name="hint_input_auth_code">输入验证码</string>
    <string name="hint_input_password">设置密码,密码需要6-16位字符</string>
    <string name="hint_confirm_password">确认密码,请再次输入密码</string>
    <string name="hint_device_code">设备编号</string>
    <string name="hint_device_card_num">设备卡号</string>
    <string name="hint_stu_name">学生姓名</string>
    <string name="hint_relation">与学生关系</string>
    <string name="hint_par_name">家长姓名</string>
    <string name="hint_birthday">出生年月</string>
    <string name="hint_stu_sex">学生性别</string>
    <string name="hint_address">家庭住址</string>
    <string name="hint_comment">备注信息</string>
    <string name="hint_choice_province">选择学校所属省份</string>
    <string name="hint_choice_city">选择学校所属城市</string>
    <string name="hint_choice_school">选择学校</string>

    <string name="label_class">班级</string>
    <string name="label_teacher">班主任</string>

    <string name="next_step">下一步</string>
    <string name="txt_read_agreement">我已阅读并接受</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="modify_password">修改密码</string>
    <string name="new_msg_notice_setting">新消息通知设置</string>
    <string name="version_info">版本信息</string>
    <string name="about">关于我们</string>
    <string name="login_out">退出登录</string>
    <string name="old_password">原密码</string>
    <string name="btn_submit">提交</string>
    <string name="reset_password">重置密码</string>
    <string name="cellphone">电话号码</string>
    <string name="hint_teacher_name">教师名字</string>
    <string name="label_province">省份：</string>
    <string name="label_city">城市：</string>
    <string name="label_shcool">学校：</string>
    <string name="label_cellphone">电话号码：</string>
    <string name="label_parent_name">家长姓名：</string>
    <string name="label_student_name">学生姓名：</string>
    <string name="label_relation">亲子关系：</string>
    <string name="label_device_code">设备编号：</string>
    <string name="label_device_card_num">设备卡号：</string>
    <string name="label_address">地址：</string>
    <string name="btn_close">关闭</string>
    <string name="label_stu_sex">学生性别：</string>
    <string name="label_birthday">学生生日：</string>
    <string name="btn_save">保存</string>
    <string name="send">发送</string>
    <string name="edit_content">编辑内容</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">显示更多</string>

    <string name="hint_task_manager">选择学生</string>
    <string name="hint_task_subject">请输入任务标题</string>
    <string name="hint_task_content">请输入任务描述</string>
    <string name="btn_ok">确定</string>
    <string name="hint_finish_date">截止日期</string>
    <string name="title_activity_task_list_search">TaskListSearchActivity</string>
    <string name="btn_add">点击添加</string>
    <string name="txt_class_time">上课时间</string>
    <string name="txt_course_name">课程名称</string>
    <string name="txt_course_num">节次</string>
    <string name="txt_start_time">上课时间</string>
    <string name="txt_end_time">下课时间</string>
    <string name="title_activity_start_page">StartPageActivity</string>
    <string name="title_activity_time_work">校园考勤</string>
    <string name="title_activity_pick_up">接送记录</string>
    <string name="str_date">日期</string>
    <string name="week">星期</string>
    <string name="timework_time">时间</string>
    <string name="inorout">进出标志</string>
    <string name="str_parent">家长</string>
    <string name="title_activity_teacher_pick">接孩子</string>
    <string name="title_activity_card_setting">卡片设置</string>
    <string name="title_activity_message_list">消息提示</string>
    <string name="str_card_no">卡号</string>
    <string name="lose">挂失</string>
    <string name="str_comment">备注</string>
    <string name="str_click_lose">点此挂失</string>
    <string name="str_student">学生</string>
    <string name="str_remind">提醒</string>



</resources>
