<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fmc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical">

    <com.fmc.edu.customcontrol.TopBarControl
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_top_bar_height"
        fmc:backVisible="true"
        fmc:topTitle="@string/title_activity_related_info" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_padding"
        android:paddingTop="@dimen/activity_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_margin"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/related_info_txt_province"
                style="@style/DropDownShortTextViewStyle"
                android:hint="@string/hint_choice_province"
                android:drawableLeft="@mipmap/icon_required"
                android:layout_marginTop="@dimen/activity_margin_middle" />

            <View style="@style/DividerLineStyle" />

            <TextView
                android:id="@+id/related_info_txt_city"
                style="@style/DropDownShortTextViewStyle"
                android:drawableLeft="@mipmap/icon_required"
                android:hint="@string/hint_choice_city" />

            <View style="@style/DividerLineStyle" />

            <TextView
                android:id="@+id/related_info_txt_school"
                style="@style/DropDownShortTextViewStyle"
                android:drawableLeft="@mipmap/icon_required"
                android:hint="@string/hint_choice_school" />

            <View style="@style/DividerLineStyle" />

            <TextView
                android:id="@+id/related_info_txt_class"
                style="@style/DropDownShortTextViewStyle"
                android:hint="@string/label_class"
                android:drawableLeft="@mipmap/icon_required" />

            <View style="@style/DividerLineStyle" />

            <TextView
                android:id="@+id/related_info_txt_grade"
                style="@style/DropDownShortTextViewStyle"
                android:drawableLeft="@mipmap/icon_required"
                android:hint="@string/label_grade" />

            <View style="@style/DividerLineStyle" />

            <TextView
                android:id="@+id/related_info_txt_teacher"
                style="@style/EditTextStyle"
                android:drawableLeft="@mipmap/icon_required"
                android:drawablePadding="@dimen/activity_padding_middle"
                android:hint="@string/label_teacher" />


            <View style="@style/DividerLineStyle" />

            <EditText
                android:id="@+id/related_info_edit_par_name"
                style="@style/EditTextStyle"
                android:drawableLeft="@mipmap/icon_required"
                android:drawablePadding="@dimen/activity_padding_middle"
                android:hint="@string/hint_par_name" />

            <View style="@style/DividerLineStyle" />

            <EditText
                android:id="@+id/related_info_edit_stu_name"
                style="@style/EditTextStyle"
                android:drawableLeft="@mipmap/icon_required"
                android:drawablePadding="@dimen/activity_padding_middle"
                android:hint="@string/hint_stu_name" />

            <View style="@style/DividerLineStyle" />

            <EditText
                android:id="@+id/related_info_edit_relation"
                style="@style/EditTextStyle"
                android:drawableLeft="@mipmap/icon_required"
                android:drawablePadding="@dimen/activity_padding_middle"
                android:hint="@string/hint_relation" />

            <View style="@style/DividerLineStyle" />

            <EditText
                android:id="@+id/related_info_edit_device_code"
                style="@style/EditTextStyle"
                android:hint="@string/hint_device_code" />

            <View style="@style/DividerLineStyle" />

            <EditText
                android:id="@+id/related_info_edit_device_card_num"
                style="@style/EditTextStyle"
                android:hint="@string/hint_device_card_num" />

            <View style="@style/DividerLineStyle" />


            <EditText
                android:id="@+id/related_info_edit_birthday"
                style="@style/EditTextStyle"
                android:hint="@string/hint_birthday" />

            <View style="@style/DividerLineStyle" />

            <EditText
                android:id="@+id/related_info_edit_address"
                style="@style/EditTextStyle"
                android:hint="@string/hint_address" />

            <View style="@style/DividerLineStyle" />

            <EditText
                android:id="@+id/related_info_edit_comment"
                style="@style/EditTextStyle"
                android:hint="@string/hint_comment" />

            <View style="@style/DividerLineStyle" />

            <LinearLayout
                android:background="@color/edit_text_bg_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_stu_sex"
                    android:layout_marginLeft="@dimen/activity_margin_small"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/edit_text_font_color"
                    android:textSize="@dimen/font_size_small" />

                <RadioGroup
                    android:id="@+id/related_info_rg_sex"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_size_small"
                        android:textColor="@color/edit_text_font_color"
                        android:text="女生" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_size_small"
                        android:text="男生"
                        android:textColor="@color/edit_text_font_color" />

                </RadioGroup>
            </LinearLayout>

            <View style="@style/DividerLineStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注：*为必填项"
                android:layout_marginTop="@dimen/activity_margin_small"
                android:layout_marginLeft="@dimen/activity_margin"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/label_import_font_color" />

            <Button
                android:id="@+id/related_info_btn_submit_audit"
                style="@style/OvalButtonStyle"
                android:layout_margin="@dimen/activity_margin"
                android:text="@string/btn_submit_audit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
