<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fmc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical">

    <com.fmc.edu.customcontrol.TopBarControl
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_top_bar_height"
        fmc:backVisible="true"
        fmc:topTitle="@string/title_activity_forget_password" />

    <View
        style="@style/HorizontalDividerLineStyle"
        android:layout_marginTop="@dimen/activity_margin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/edit_text_bg_color">

        <EditText
            android:id="@+id/forget_password_edit_cellphone"
            style="@style/EditTextStyle"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/register_validate_btn_get_auth_code"
            android:hint="@string/hint_input_cellphone"
            android:maxLength="11"
            android:inputType="phone" />

        <com.fmc.edu.customcontrol.ValidateButtonControl
            android:id="@+id/forget_password_btn_get_auth_code"
            style="@style/ValidateButtonStyle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_margin_middle"
            android:enabled="false"
            android:text="@string/get_auth_code" />
    </RelativeLayout>

    <View style="@style/HorizontalDividerLineStyle" />

    <EditText
        android:id="@+id/forget_password_edit_auth_code"
        style="@style/EditTextStyle"
        android:layout_alignParentLeft="true"
        android:hint="@string/hint_input_auth_code" />

    <View style="@style/HorizontalDividerLineStyle" />

    <EditText
        android:id="@+id/forget_password_edit_password"
        style="@style/EditTextStyle"
        android:layout_alignParentLeft="true"
        android:hint="@string/hint_input_password"
        android:inputType="textPassword"
        android:maxLength="16" />

    <View style="@style/HorizontalDividerLineStyle" />

    <EditText
        android:id="@+id/forget_password_edit_confirm"
        style="@style/EditTextStyle"
        android:layout_alignParentLeft="true"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:maxLength="16" />

    <View style="@style/HorizontalDividerLineStyle" />

    <Button
        android:id="@+id/forget_password_btn_reset"
        style="@style/OvalButtonStyle"
        android:layout_margin="@dimen/activity_margin"
        android:enabled="false"
        android:text="@string/reset_password" />
</LinearLayout>
