<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fmc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical">

    <com.fmc.edu.customcontrol.TopBarControl
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_top_bar_height"
        fmc:backVisible="true"
        fmc:topTitle="@string/title_activity_modify_password" />

    <View
        style="@style/HorizontalDividerLineStyle"
        android:layout_marginTop="@dimen/activity_margin" />


    <EditText
        android:id="@+id/modify_password_edit_old"
        style="@style/EditTextStyle"
        android:layout_alignParentLeft="true"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:maxLength="16" />

    <View style="@style/HorizontalDividerLineStyle" />

    <EditText
        android:id="@+id/modify_password_edit_new"
        style="@style/EditTextStyle"
        android:layout_alignParentLeft="true"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
        android:hint="@string/hint_input_password"
        android:inputType="textPassword"
        android:maxLength="16" />

    <View style="@style/HorizontalDividerLineStyle" />


    <EditText
        android:id="@+id/modify_password_edit_confirm"
        style="@style/EditTextStyle"
        android:layout_alignParentLeft="true"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:maxLength="16" />

    <Button
        android:id="@+id/modify_password_btn_submit"
        style="@style/OvalButtonStyle"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/btn_submit" />
</LinearLayout>
