<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="35dp"
    android:paddingRight="35dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/activity_font_color"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_oval_corner_border_edit">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            style="@style/EditTextStyle"
            android:background="@drawable/shape_oval_corner_edit"
            android:hint="@string/hint_input_cellphone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/shape_oval_corner_border_edit">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            style="@style/EditTextStyle"
            android:background="@drawable/shape_oval_corner_edit"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword" />
    </LinearLayout>
</LinearLayout>
